apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: casego-apps
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: http
